# bam-masterdata

./: .env.example  README.md  mkdocs.yml  pyproject.toml  zensical.toml
bam_masterdata/cli/: cli.py
bam_masterdata/datamodel/: object_types.py  vocabulary_types.py
bam_masterdata/datamodel/welding/: __init__.py  object_types.py  vocabularies.py
bam_masterdata/metadata/: definitions.py  entities.py  entities_dict.py
bam_masterdata/openbis/: login.py
bam_masterdata/utils/: decorators.py
docs/: index.md
docs/explanations/: metadata_definitions.md  metadata_entities.md  parsing_structure.md  schema_defs.md
docs/howtos/: extend_masterdata.md  object_references.md  object_types.md
docs/howtos/parsing/: create_new_parsers.md  parser_app.md
docs/references/: api.md  extra.md  glossary.md
docs/tutorials/: getting_started.md  parsing.md
tests/cli/: test_entities_to_rdf.py
tests/metadata/: test_definitions.py  test_entities.py  test_entities_dict.py
tools/scripts/: install_python_dependencies.bat  install_python_dependencies.sh
