[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "bam-masterdata"
description = "The BAM Data Store utility tools and masterdata models wrapped in a Python package."
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "BAM Data Store", email = "datastore@bam.de" },
]
maintainers = [
  { name = "Jose M. Pizarro", email = "jose.pizarro-blanco@bam.de" },
]
license = { file = "LICENSE" }
classifiers = [
  "Natural Language :: English",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "pybis~=1.37.4",
  "openpyxl",
  "click",
  "pydantic~=2.10.5",
  "pint",
  "rdflib",
  "h5py~=3.12.1",
  "python-decouple",
  "structlog==24.4.0",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
  "pytest-timeout",
  "pytest-cov",
  "pre-commit",
  "detect-secrets",
  "zensical>=0.0.41",
]

[project.urls]
"Homepage" = "https://github.com/BAMresearch/bam-masterdata"
"Bug Tracker" = "https://github.com/BAMresearch/bam-masterdata/issues"
"Documentation" = "https://bamresearch.github.io/bam-masterdata/"

[project.scripts]
bam_masterdata = "bam_masterdata.cli:cli"

[tool.ruff]
line-length = 88
indent-width = 4
# Exclude a variety of commonly ignored directories.
include = ["bam_masterdata/*.py", "tests/*.py"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "dependencies",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "PL", # pylint
    "F", # Pyflakes
    "UP", # pyupgrade
    "I", # isort
]
ignore = [
    "F401", # Module imported but unused
    "E501", # Line too long ({width} > {limit} characters)
    "E701", # Multiple statements on one line (colon)
    "E731", # Do not assign a lambda expression, use a def
    "E402",  # Module level import not at top of file
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used instead of constant
    "PLW0603", # Using the global statement
    "PLW2901", # redefined-loop-name
    "PLR1714", # consider-using-in
    "PLR5501", # else-if-used
]
fixable = ["ALL"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["dependencies*"]
namespaces = false

[tool.setuptools_scm]
write_to = "bam_masterdata/_version.py"
